--- a/app/index.html
+++ b/app/index.html
@@ -1,124 +1,167 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Progressive Web Apps</title>
-  <link rel="stylesheet" href="/css/app.css">
-  <link rel="manifest" href="/manifest.json">
+    <link rel="stylesheet" type="text/css" href="process/css/app.css"/>
+    <link rel="stylesheet" type="text/css" href="process/css/app.css"/>
+    <link rel="stylesheet" type="text/css" href="process/css/app.css"/>
+    <link rel="stylesheet" type="text/css" href="app/css/app.css"/>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Progressive Web App</title>
+    <link rel="stylesheet" href="/css/app.css">
+    <link rel="manifest" href="/manifest.json">
 
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
-  <meta name="apple-mobile-web-app-title" content="Wisdom Pet">
-  <meta name="apple-touch-icon" content="images/icons/icon-152x152.png">
+    <meta name="apple-mobile-web-app-title" content="Lunarlinr Demo">
+    <meta name="apple-touch-icon" content="images/icons/icon-152x152.png">
 
-  <meta name="msapplication-TileImage" content="images/icons/icon-144x144.png">
-  <meta name="msapplication-TileColor" content="#2F3BA2">
+    <meta name="msapplication-TileImage" content="images/icons/icon-144x144.png">
+    <meta name="msapplication-TileColor" content="#2F3BA2">
 
 </head>
 <body>
 <div class="loader">
-  <div class="loader-text">Loading...</div>
-  <div class="progress">
-      <div class="progress-bar progress-bar-danger progress-bar-striped active" role="progressbar" style="width: 100%"></div>
-  </div>
+    <div class="loader-text">Loading...</div>
+    <div class="progress">
+        <div class="progress-bar progress-bar-danger progress-bar-striped active" role="progressbar"
+             style="width: 100%"></div>
+    </div>
 </div>
 <header>
-  <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-    <div class="container">
-      <div class="navbar-header">
-        <img class="reload reloadbtn-lg" src="images/icons/icon_reload.svg" alt="Reload Button" />
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapse">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="#slideshow"><h1>Wisdom<span class="subhead">Pet Medicine</span></h1></a>
-      </div><!-- navbar-header -->
-      <div class="collapse navbar-collapse" id="collapse">
-        <ul class="nav navbar-nav navbar-right">
-          <li><img class="reload reloadbtn" src="images/icons/icon_reload.svg" alt="Reload Button" /></li>
-          <li class="active"><a href="#slideshow">Home</a></li>
-          <li><a href="#adoption">Adoption</a></li>
-          <li><a href="#appointments">Appointments</a></li>
-        </ul>
-      </div><!-- navbar collapse -->
-    </div><!-- navbar container -->
-  </nav><!-- nav -->
-  <script id="slideshow-template" type="text/x-handlebars-template">
-    <div class="carousel fade" data-ride="carousel" id="slideshow">
-      <div class="carousel-inner">
-        {{#each slideshow}}
-          {{#if @first}}
-            <div class="item active"><img src="images/pets/{{filename}}.jpg" alt="{{pet}} photo"></div>
-          {{else}}
-            <div class="item"><img src="images/pets/{{filename}}.jpg" alt="{{pet}} photo"></div>
-          {{/if}}
-        {{/each}}
-      </div><!--carousel inner -->
-      <a class="left carousel-control" href="#slideshow" role="button" data-slide="prev"></a>
-      <a class="right carousel-control" href="#slideshow" role="button" data-slide="next"></a>
-    </div><!--carousel fade -->
-  </script>
-  <div id="slideshow-content"></div>
+    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+        <div class="container">
+            <div class="navbar-header">
+                <img class="reload reloadbtn-lg" src="images/icons/icon_reload.svg" alt="Reload Button"/>
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#slideshow"><h1>Lunarline<span class="subhead">Product Demo</span></h1>
+                </a>
+            </div><!-- navbar-header -->
+            <div class="collapse navbar-collapse" id="collapse">
+                <ul class="nav navbar-nav navbar-right">
+                    <li><img class="reload reloadbtn" src="images/icons/icon_reload.svg" alt="Reload Button"/></li>
+                    <li class="active"><a href="#slideshow">Home</a></li>
+                    <li><a href="#products">Products</a></li>
+                    <li><a href="#demos">Demos</a></li>
+                </ul>
+            </div><!-- navbar collapse -->
+        </div><!-- navbar container -->
+    </nav><!-- nav -->
+    <script id="slideshow-template" type="text/x-handlebars-template">
+        <div class="carousel fade" data-ride="carousel" id="slideshow">
+            <div class="carousel-inner">
+                {{#each slideshow}}
+                    {{#if @first}}
+                        <div class="item active"><img src="images/demoitem/{{filename}}.jpg"></div>
+                    {{else}}
+                        <div class="item"><img src="images/demoitem/{{filename}}.jpg"></div>
+                    {{/if}}
+                {{/each}}
+            </div><!--carousel inner -->
+            <a class="left carousel-control" href="#slideshow" role="button" data-slide="prev">
+                <button type="button" class="btn btn-default" aria-label="Triangle-Right">
+                <span class="glyphicon glyphicon-triangle-right" aria-hidden="true"></span>
+                </button>
+            </a>
+            <a class="right carousel-control" href="#slideshow" role="button" data-slide="next"><button type="button" class="btn btn-default" aria-label="Triangle-Left">
+                <span class="glyphicon glyphicon-triangle-left" aria-hidden="true"></span>
+            </button>
+            </a>
+        </div><!--carousel fade -->
+    </script>
+    <div id="slideshow-content"></div>
 </header>
 <main>
-  <div class="page" id="adoption">
-    <div class="container">
-      <h2 class="page-headline">Adoptions</h2>
-      <p>These loving and deserving pets need a home. Please help us find a place for them. Click on their photo for more information.</p>
-      <script id="adoption-template" type="text/x-handlebars-template">
-        {{#each adoption}}
-          <div class="col-md-2 col-sm-3 col-xs-4 openpetmodal" data-toggle="modal" data-target="#wisdompetmodal" data-petname="{{pet}}" data-petbreed="{{breed}}" data-petowner="{{owner}}" data-petinfo="{{description}}" data-petimage="{{filename}}">
-            <img class="img-circle" src="images/pets/{{filename}}_tn.jpg" alt="{{pet}} photo"/>
-          </div><!-- column -->
-        {{/each}}
-      </script>
-      <div id="adoption-content"></div>
-    </div><!-- container -->
-  </div><!-- page-adoption -->
-  <div class="page" id="appointments">
-    <div class="container">
-      <h2 class="page-headline">Appointments</h2>
-      <p>Here's the pets that came in this week for an appointment. Click on a pet's photo for more info.</p>
+    <div class="page" id="products">
+        <div class="container">
+            <h2 class="page-headline">Products</h2>
+            <p>Click on photo for more information.</p>
+            <script id="products-template" type="text/x-handlebars-template">
+                {{#each product}}
+                    <div class="col-md-2 col-sm-3 col-xs-4 openpetmodal" data-toggle="modal" data-target="#Petmodal"
+                         data-productsname="{{demoitem}}" data-productsdescription="{{description}}"
+                         data-productstype="{{product}}" data-productsinfo="{{info}}" data-productsimage="{{filename}}">
+                        <img class="img-circle" src="images/demoitem/{{filename}}_tn.jpg" alt="{{demoitem}} photo"/>
+                    </div>
+                {{/each}}
+            </script>
 
-      <script id="appointments-template" type="text/x-handlebars-template">
-        {{#each appointments}}
-          <div class="appointment media openpetmodal" data-toggle="modal" data-target="#wisdompetmodal" data-petname="{{pet}}" data-petbreed="{{breed}}" data-petowner="{{owner}}" data-petinfo="{{reason}}" data-petimage="{{filename}}">
-            <div class="media-left media-top">
-              <img class="media-object appointment-img img-rounded" src="images/pets/{{filename}}_tn.jpg" alt="{{pet}} photo">
-            </div><!-- media-left media-top -->
-            <div class="media-body">
-              <h3 class="media-heading appointments-heading">{{pet}}, <span class="appointment-breed">{{breed}}</span></h3>
-              <div class="appointment-owner"><span class="appointment-owner-title">Owner: </span> <span class="appointment-owner-name">{{owner}}</span></div>
-              <div class="appointment-reason">{{reason}}</div>
-            </div><!-- media-body -->
-          </div><!-- appointment media openpetmodal -->
-        {{/each}}
-      </script>
-      <div id="appointments-content"></div>
-    </div><!-- container -->
-  </div><!-- page-appointments -->
+            <div id="products-content">
+                <div id="products-menu">
+                <ul>
+                    <li>Course Delivery</li>
+                    <li>Courseware Development</li>
+                    <li>Rolebased WBT</li>
+                    <li>Interactive Branched CBT</li>
+                    <li>Video Tutorials</li>
+                </ul>
+            </div>
+        </div><!-- container -->
+    </div><!-- page-products -->
+    <div class="page" id="demos">
+        <div class="container">
+            <h2 class="page-headline">Demos</h2>
+            <p>Click on a photo for more info.</p>
+
+            <script id="demos-template" type="text/x-handlebars-template">
+                {{#each demos}}
+                    <div class="col-md-2 col-sm-3 col-xs-4 openpetmodal" data-toggle="modal"
+                         data-target="#demos{{filename}}" data-demosname="{{demoitem}}" data-demostitle="{{title}}" data-demostopic="{{topic}}"
+                         data-demostype="{{type}}" data-demosdescription="{{description}}"
+                         data-demosinfo="{{info}}">
+                        <div class="media-left media-top">
+                            <img class="media-object demos-img img-rounded" src="images/demoitem/{{filename}}_tn.jpg"
+                                 alt="{{demoitem}} photo">
+                        </div><!-- media-left media-top -->
+                        <div class="media-body">
+                            <h3 class="media-heading demos-heading">{{demoitem}}, <span class="demos-title">{{title}}Lorem Ipsum:</span></h3>
+                                <div class="demos-topic">{{topic}}</div>
+                            <div class="demos-type">{{type}}</div>
+                            <div class="demos-description">{{description}}</div>
+                            <div class="demos-info">{{info}}</div>
+                        </div><!-- media-body -->
+                    </div><!-- demos media openpetmodal -->
+                {{/each}}
+            </script>
+            <div id="#demos-content"></div>
+            <div id="demos-menu">
+                <ul>
+                    <li>Course Delivery</li>
+                    <li>Courseware Development</li>
+                    <li>Rolebased WBT</li>
+                    <li>Interactive Branched CBT</li>
+                    <li>Video Tutorials</li>
+                </ul>
+        </div><!-- container -->
+    </div><!-- page-appointments -->
+
 </main>
 
-<div class="modal fade" id="wisdompetmodal" tabindex="-1" role="dialog" aria-labelledby="petModal">
-  <div class="modal-dialog" data-dismiss="modal" aria-label="Close" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" arial-label="Close" role="document"><span aria-hidden="true">&times;</span></button>
-        <h2 class="modal-title modal-petname"></h2>
-        <div class="modal-petbreed"></div>
-      </div><!-- modal header -->
-      <div class="modal-body">
-        <img class="img-responsive modal-petimage" />
-        <p class="modal-petinfo"></p>
-      </div><!--modal-body-->
-    </div><!-- modal content -->
-  </div><!-- modal dialog -->
-</div><!-- modal fade -->
+
+                <div class="modal fade" id="petmodal" tabindex="-1" role="dialog" aria-labelledby="petModal">
+                    <div class="modal-dialog" data-dismiss="modal" aria-label="Close" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <button type="button" class="close" data-dismiss="modal" arial-label="Close"
+                                        role="document"><span aria-hidden="true">&times;</span></button>
+                                <h2 class="modal-title modal-demos"></h2>
+                                <div class="modal-title"></div>
+                            </div><!-- modal header -->
+                            <div class="modal-body">
+                                <img class="img-responsive modal-demosimage" />
+                                <p class="modal-demosinfo"></p>
+                            </div><!--modal-body-->
+                        </div><!-- modal content -->
+                    </div><!-- modal dialog -->
+                </div><!-- modal fade -->
+
 
 <script src="js/app.js"></script>
 </body>
